# MobileRobot

./: .gitignore  DOCKER_SETUP_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  TEST_COMMANDS.md  TEST_LIBRA_AI.md  lidar_sample.py  lidar_viewer.py  lider.sh  lider_test_terminal1.sh  lider_test_terminal2.sh  log  system_diagram.drawio  test_motors_complete.py  test_move_forward.py  test_pr2040_usb.py  test_pr2040_usb_fixed.py  test_t5_gpu_oom.py  test_t5_ollama_stop.py  test_t6_performance.py  test_usb_services.py  verify_lider_5min.sh
BodyModel/: BaseBody.stl  BoltCap.stl  Center_body_upper.stl  Front_body_upper.stl  LiderBaseUnit_Base.stl  LiderBaseUnit_Part1.stl  LiderBaseUnit_Parts2.stl  LiderBaseUnit_ServoBaseUppser.stl  LiderBaseUnit_parts3.stl  LiderBaseUnit_sensorStay.stl  LiderBaseUnit_servobase.stl  LiderBaseUnit_servobase_upper.stl  LiderStay.stl  LiderStayAndCamera.stl  LiderStay_under.stl  MainBody_low_large.stl  MainBody_under.stl  Raspberrypi_stay.stl  Raspberrypi_stay2.stl  Raspberrypi_stay3.stl  Raspberrypi_stay_assy.stl  Rear_body_upper.stl  SpeakerStay.stl  UnderCover.stl  testpice.stl
LiderModule/: README.md  SPEC.md  STS3215_XIAO_ESP32C3_BusServo_Guide.md  pattern_scan.ply  scan_step2.ply  計測パターン.csv
LiderModule/3dmodel/: LiderBaseUnit_Sensor_Stay.stl  LiderBaseUnit_base_lower.stl  (+3 more)
docs/: SLAM_2.5D_requirement.md  SLAM_2.5D_visualization_tool_requirement.md  SYSTEM_REQUIREMENTS.md  raspberry_pi_setup.md
edge_services/: README.md  VERIFICATION.md  _verify_common.py  calibrate_wheel_base.py  camera_service.py  diagnose_motor.py  dummy_camera.py  duty_sweep.py  launch_all.py  motor_service.py  odometry_service.py  requirements.txt  verify_e1.py  verify_e10.py  verify_e11.py  verify_e12.py  verify_e2.py  verify_e3.py  verify_e3_e5_e6.py  verify_e4.py  verify_e5.py  verify_e6.py  verify_e7.py  verify_e8.py  verify_e9.py
mobile_robot_edge/: README.md  README_DOCKER.md  package.xml  setup.cfg  setup.py
mobile_robot_edge/launch/: camera.launch.py  edge_bringup.launch.py  ws_edge_bringup.launch.py
mobile_robot_edge/mobile_robot_edge/: disable_camera_autofocus.sh  lider_module_node.py  motor_controller.py  odometry_publisher.py  ws_camera_bridge.py  ws_motor_controller.py  ws_odometry_publisher.py
mobile_robot_edge/urdf/: mobile_robot.urdf.xacro
mobile_robot_server/: VERIFICATION.md  package.xml  setup.cfg  setup.py
mobile_robot_server/config/: nav2_params.yaml  rtabmap_params.yaml  slam_toolbox_params.yaml
mobile_robot_server/launch/: server_bringup.launch.py
mobile_robot_server/mobile_robot_server/: autonomous_mapping.py  llm_nav_controller.py
ros2_docker/: Dockerfile  QUICKSTART.md  README.md  VERIFICATION.md  docker-compose.yml  run_edge_bringup.sh
(+99 files in other folders)
